# cumulus_feature_barcoding

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  ReadParser.hpp  auto_utils.hpp  barcode_utils.hpp  compress.hpp  datamatrix_utils.hpp  filter_chimeric_reads  generate_count_matrix_ADTs.cpp  generate_feature_barcode_matrices.cpp  gzip_utils.hpp  umi_utils.hpp
.github/workflows/: ci.yml
src/: CMakeLists.txt  barcode_utils.hpp  datamatrix_utils.hpp  generate_count_matrix_ADTs.cpp  gzip_utils.hpp
